scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,15 @@
 
 @custom-variant dark (&:is(.dark *));
 
+:root {
+  body[data-scroll-locked][data-scroll-locked] {
+    overflow: auto !important;
+  }
+  body[data-scroll-locked] {
+    margin-right: 0 !important;
+  }
+}
+
 .halo {
   position: fixed;
   z-index: 0;
